[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "wireless-passfinder"
version = "0.2.0"
description = "A Windows WiFi profile auditor CLI with safe defaults."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mohammad RCE" }
]
keywords = ["wifi", "windows", "cli", "netsh", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/Mohammadrce/WirelessPassfinder"
Issues = "https://github.com/Mohammadrce/WirelessPassfinder/issues"

[project.scripts]
wpfinder = "wireless_passfinder.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/wireless_passfinder"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
warn_unused_configs = true
